fix wrapping on times in lists

--- a/client/css/less/components/ticket-list.less
+++ b/client/css/less/components/ticket-list.less
@@ -40,6 +40,7 @@
           font-weight: 400;
           font-size: 16px;
           text-align: right;
+          white-space: nowrap;
         }
 
         .tags {
